// cmd/fyne-gui/new-core/protocol/file_transfer.proto

syntax = "proto3";

package protocol;

option go_package = "./";


// ---------------------------------------------------------------- //
// --- СООБЩЕНИЯ ДЛЯ ПРОТОКОЛА ПЕРЕДАЧИ ФАЙЛОВ --- //
// ---------------------------------------------------------------- //

// FileMetadata - "Анонс" файла. Отправляется по основному чат-стриму.
// Сообщает получателю о том, что ему доступен для скачивания файл.
message FileMetadata {
    string transfer_id = 1;     // Уникальный ID для этой передачи (генерируется GUI, UUID)
    string filename = 2;        // Оригинальное имя файла
    int64  size_bytes = 3;      // Полный размер файла в байтах
    string hash_sha256 = 4;     // Хеш всего файла для проверки целостности (в hex-формате)
    string mime_type = 5;       // MIME-тип файла (например, "image/jpeg")
}

// FileDownloadRequest - Запрос на скачивание. Отправляется по основному чат-стриму.
// Получатель отправляет это сообщение, когда пользователь нажимает "Скачать".
message FileDownloadRequest {
  string transfer_id = 1;     // ID передачи, которую нужно начать
}

// FileData - "Кусок" файла. Отправляется по НОВОМУ, отдельному файловому стриму.
// Весь файл разбивается на такие "куски" и передается последовательно.
message FileData {
    string transfer_id = 1;     // ID передачи, к которой относится этот кусок
    bytes  chunk_data = 2;      // Сами байты "куска" файла
    int64  offset = 3;          // Смещение этого "куска" от начала файла (для докачки)
    bool   last_chunk = 4;      // Последний кусок 
}

// FileTransferStatus - Сообщение о статусе. Отправляется по основному чат-стриму.
// Используется для уведомления об ошибках или успешном завершении.
message FileTransferStatus {
    string transfer_id = 1;
    
    enum Status {
        OK = 0;               // Успешно (используется редко)
        UNAVAILABLE = 1;      // Файл больше не доступен у отправителя
        HASH_MISMATCH = 2;    // Хеш не совпал после скачивания
        CANCELLED = 3;        // Передача отменена одной из сторон
        GENERIC_ERROR = 4;    // Общая ошибка
    }
    Status status = 2;
    string error_message = 3; // Дополнительное сообщение об ошибке
}